--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Sydney - La Città Affascinante</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@400;500&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -26,10 +27,10 @@
             <a class="nav-link" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#storia">Storia</a>
+            <a class="nav-link" href="#attrazioni">Attrazioni</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#attrazioni">Attrazioni</a>
+            <a class="nav-link" href="#storia">Storia</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#info">Info Pratiche</a>
@@ -244,22 +245,30 @@
   <section id="contatti" class="section-benvenuti">
     <div class="container">
       <h2 class="section-title">Contattaci</h2>
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="card mb-4">
-            <div class="card-body">
-              <h5 class="card-title mb-3"><i class="fas fa-map-marker-alt text-primary"></i> Indirizzo</h5>
-              <p>Sydney Visitor Centre<br>The Rocks, Sydney NSW 2000<br>Australia</p>
+      <div class="row g-4">
+        <div class="col-lg-5">
+          <div class="contact-info-wrapper">
+            <div class="contact-info-item mb-4">
+              <div class="contact-icon">
+                <i class="fas fa-map-marker-alt"></i>
+              </div>
+              <div class="contact-details">
+                <h5>Indirizzo</h5>
+                <p>Sydney Visitor Centre<br>The Rocks, Sydney NSW 2000<br>Australia</p>
+              </div>
             </div>
-          </div>
-          <div class="card mb-4">
-            <div class="card-body">
-              <h5 class="card-title mb-3"><i class="fas fa-phone text-primary"></i> Contatti</h5>
-              <p>Telefono: +61 2 9240 8788<br>Email: info@visitsydney.com</p>
+            <div class="contact-info-item">
+              <div class="contact-icon">
+                <i class="fas fa-phone"></i>
+              </div>
+              <div class="contact-details">
+                <h5>Contatti</h5>
+                <p>Telefono: +61 2 9240 8788<br>Email: info@visitsydney.com</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-7">
           <form id="contactForm" class="card p-4">
             <h5 class="mb-3">Inviaci un Messaggio</h5>
             <div class="mb-3">
